--- a/app/src/main/res/layout/custom_recycler_item.xml
+++ b/app/src/main/res/layout/custom_recycler_item.xml
@@ -12,7 +12,6 @@
         android:id="@+id/imageview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:srcCompat="@tools:sample/avatars"
-        android:scaleType="centerCrop"
-        android:topLeftRadius="6dp"/>
+        android:scaleType="centerInside"
+        tools:srcCompat="@tools:sample/avatars" />
 </LinearLayout>
