--- a/app/src/main/res/layout/fragment_post2.xml
+++ b/app/src/main/res/layout/fragment_post2.xml
@@ -107,7 +107,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/g" />
+                        app:srcCompat="@drawable/profile2" />
 
                 </androidx.cardview.widget.CardView>
 
