--- a/app/src/main/res/drawable/post_round.xml
+++ b/app/src/main/res/drawable/post_round.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ED5E0E" />
-    <stroke android:width="1dp" android:color="#ED5E0E" />
+    <solid android:color="@color/black" />
+    <stroke android:width="1dp" android:color="@color/black" />
     <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
     <corners  android:topLeftRadius="0dp" android:topRightRadius="0dp" android:bottomLeftRadius="50dp" android:bottomRightRadius="0dp"/>
 </shape>
