--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -268,6 +268,8 @@
                 android:layout_height="225dp"
                 android:layout_gravity="center"
                 android:numColumns="3"
+                android:verticalSpacing="1dp"
+                android:horizontalSpacing="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.4"
