--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -59,6 +59,24 @@
                 app:layout_constraintTop_toBottomOf="@+id/hello"
                 app:layout_constraintVertical_bias="0.0" />
 
+            <FrameLayout
+                android:id="@+id/frame1"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_gravity="right"
+                android:layout_marginStart="235dp"
+                android:focusable="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/home_img"
+                    android:layout_width="175dp"
+                    android:layout_height="175dp"
+                    android:layout_gravity="right" />
+            </FrameLayout>
+
             <TextView
                 android:id="@+id/welcom"
                 android:layout_width="wrap_content"
