--- a/app/src/main/res/layout/activity_card_trans.xml
+++ b/app/src/main/res/layout/activity_card_trans.xml
@@ -29,50 +29,59 @@
                 android:id="@+id/cname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/underline_search"
                 android:fontFamily="@font/notosans_black"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:text="XXHYUN"
+                android:textSize="30dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/cnickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="30dp"
                 android:fontFamily="@font/notosans_medium"
+                android:textSize="20dp"
                 android:text="Game Director" />
 
             <TextView
                 android:id="@+id/cinfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="30dp"
                 android:fontFamily="@font/notosans_kr_regular"
                 android:text="안녕하세요.\n저의 Pot, Folio에 방문해주셔서 감사합니다."
-                android:textSize="12dp" />
+                android:textSize="18dp" />
 
             <LinearLayout
-                android:layout_width="400dp"
-                android:layout_height="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
                 android:layout_marginBottom="5dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/round_mypage"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/csns"
-                    android:layout_width="357dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="pp734.k"
-                    android:textAlignment="textEnd" />
+                    android:textSize="18dp"
+                    android:textAlignment="textEnd"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"/>
 
                 <ImageView
                     android:id="@+id/imageView6"
-                    android:layout_width="17dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginEnd="30dp"
                     android:background="#FFFFFF"
                     android:tint="#7D7D7D"
                     app:srcCompat="@drawable/sns_icon" />
@@ -80,25 +89,31 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="400dp"
-                android:layout_height="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/round_mypage"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/cphone"
-                    android:layout_width="358dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="010.6345.6284"
-                    android:textAlignment="textEnd" />
+                    android:textSize="18dp"
+                    android:textColor="@color/black"
+                    android:textAlignment="textEnd"
+                    android:layout_weight="1"/>
 
 
                 <ImageView
                     android:id="@+id/imageView5"
-                    android:layout_width="17dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="3dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginEnd="30dp"
                     android:scaleType="fitStart"
                     android:tint="#7D7D7D"
                     app:srcCompat="@drawable/call_icon" />
@@ -106,30 +121,35 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="400dp"
-                android:layout_height="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
                 android:background="@drawable/round_mypage"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/cmail"
-                    android:layout_width="358dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="lkeyun3301@gmial.com"
-                    android:textAlignment="textEnd" />
+                    android:text="lkeyun3301@gmail.com"
+                    android:textAlignment="textEnd"
+                    android:textSize="18dp"
+                    android:textColor="@color/black"
+                    android:layout_weight="1"/>
 
                 <ImageView
                     android:id="@+id/imageView4"
-                    android:layout_width="17dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="20dp"
+                    android:layout_height="25dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginEnd="30dp"
                     android:tint="#7D7D7D"
                     app:srcCompat="@drawable/email_icon" />
             </LinearLayout>
 
 
             <LinearLayout
-                android:layout_width="400dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_mypage"
                 android:orientation="horizontal">
@@ -138,19 +158,51 @@
                     android:id="@+id/card_app_logo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="0dp"
                     android:fontFamily="@font/app_name"
                     android:text="Pot,Folio"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="20dp" />
 
                 <ImageView
                     android:layout_width="300dp"
                     android:layout_height="10dp"
                     android:layout_marginStart="7dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/underline_card" />
+
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="300dp"
+                    android:layout_height="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="30dp"
+                    android:layout_weight="1"
                     android:background="@drawable/underline_card" />
             </LinearLayout>
 
         </LinearLayout>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Pot,Folio"
+            android:textSize="50dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="40dp"
+            android:textAlignment="textEnd"
+            android:fontFamily="@font/app_name"
+            android:textColor="#48ED5E0E"/>
 
     </FrameLayout>
 
