--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,7 +16,7 @@
         android:background="#00FFFFFF"
         android:backgroundTint="#00FFFFFF"
         android:gravity="bottom"
-        app:umanoDragView="@id/slide_layout"
+        app:umanoDragView="@id/main_slideLayout"
         app:umanoPanelHeight="150dp"
         app:umanoShadowHeight="5dp">
 
@@ -170,55 +170,255 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
-            android:id="@+id/slide_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/round"
-            android:backgroundTint="@null">
-
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/main_slideLayout"
+            android:background="@drawable/round_grey1">
 
             <Button
                 android:id="@+id/btn_toggle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="All Folio"
+                android:fontFamily="@font/app_name"
+                android:textColor="@color/black"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                android:textAlignment="textStart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 style="@style/Widget.AppCompat.Button.Borderless"/>
 
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_margin="20dp"
-                app:cardCornerRadius="20dp"
-                app:cardUseCompatPadding="true">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/allfolio_img1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.8"
-                        android:scaleType="centerCrop"
-                        app:riv_corner_radius_top_left="10dp"
-                        app:riv_corner_radius_top_right="10dp"
-                        android:src="@drawable/sonny"
-                        app:riv_mutate_background="true"
-                        app:riv_oval="false"/>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                    <TextView
+
+                <LinearLayout
+                    android:id="@+id/slide_layout1"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@null"
+                    android:orientation="vertical">
+
+
+
+
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:layout_margin="20dp"
-                        android:layout_weight="0.2"
-                        android:text="Title1"/>
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        app:cardCornerRadius="20dp"
+                        app:cardUseCompatPadding="true">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <com.makeramen.roundedimageview.RoundedImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.8"
+                                android:scaleType="centerCrop"
+                                app:riv_corner_radius_top_left="10dp"
+                                app:riv_corner_radius_top_right="10dp"
+                                android:src="@drawable/graphicdesign_1"
+                                app:riv_mutate_background="true"
+                                app:riv_oval="false"/>
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:layout_weight="0.2"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/app_name"
+                                android:layout_gravity="center"
+                                android:text="Title1"/>
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        app:cardCornerRadius="20dp"
+                        app:cardUseCompatPadding="true">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <com.makeramen.roundedimageview.RoundedImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.8"
+                            android:scaleType="centerCrop"
+                            app:riv_corner_radius_top_left="10dp"
+                            app:riv_corner_radius_top_right="10dp"
+                            android:src="@drawable/graphicdesign_2"
+                            app:riv_mutate_background="true"
+                            app:riv_oval="false"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:layout_weight="0.2"
+                            android:layout_margin="10dp"
+                            android:fontFamily="@font/app_name"
+                            android:layout_gravity="center"
+                            android:text="Title1"/>
+                    </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        app:cardCornerRadius="20dp"
+                        app:cardUseCompatPadding="true">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <com.makeramen.roundedimageview.RoundedImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.8"
+                                android:scaleType="centerCrop"
+                                app:riv_corner_radius_top_left="10dp"
+                                app:riv_corner_radius_top_right="10dp"
+                                android:src="@drawable/graphicdesign_2"
+                                app:riv_mutate_background="true"
+                                app:riv_oval="false"/>
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:layout_weight="0.2"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/app_name"
+                                android:layout_gravity="center"
+                                android:text="Title3"/>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
+                <LinearLayout
+                    android:id="@+id/slide_layout"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@null"
+                    android:orientation="vertical">
+
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        app:cardCornerRadius="20dp"
+                        app:cardUseCompatPadding="true">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <com.makeramen.roundedimageview.RoundedImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.8"
+                                android:scaleType="centerCrop"
+                                app:riv_corner_radius_top_left="10dp"
+                                app:riv_corner_radius_top_right="10dp"
+                                android:src="@drawable/_b98a07c2ee086f846f2f47f7d5e0b6b"
+                                app:riv_mutate_background="true"
+                                app:riv_oval="false"/>
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:layout_weight="0.2"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/app_name"
+                                android:layout_gravity="center"
+                                android:text="Title1"/>
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        app:cardCornerRadius="20dp"
+                        app:cardUseCompatPadding="true">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <com.makeramen.roundedimageview.RoundedImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.8"
+                                android:scaleType="centerCrop"
+                                app:riv_corner_radius_top_left="10dp"
+                                app:riv_corner_radius_top_right="10dp"
+                                android:src="@drawable/sonny"
+                                app:riv_mutate_background="true"
+                                app:riv_oval="false"/>
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:layout_weight="0.2"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/app_name"
+                                android:layout_gravity="center"
+                                android:text="Title2"/>
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        app:cardCornerRadius="20dp"
+                        app:cardUseCompatPadding="true">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <com.makeramen.roundedimageview.RoundedImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.8"
+                                android:scaleType="centerCrop"
+                                app:riv_corner_radius_top_left="10dp"
+                                app:riv_corner_radius_top_right="10dp"
+                                android:src="@drawable/sonny"
+                                app:riv_mutate_background="true"
+                                app:riv_oval="false"/>
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:layout_weight="0.2"
+                                android:layout_margin="10dp"
+                                android:fontFamily="@font/app_name"
+                                android:layout_gravity="center"
+                                android:text="Title3"/>
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
