--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -339,8 +339,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         app:cardCornerRadius="20dp"
-                        app:cardUseCompatPadding="true">
-                        <LinearLayout
+                        app:cardUseCompatPadding="true">                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
