--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -41,40 +41,42 @@
         app:layout_constraintStart_toEndOf="@+id/app_name"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="650dp"
+        android:layout_marginTop="580dp"
         android:layout_marginEnd="311dp"
-        android:layout_marginBottom="605dp"
+        android:layout_marginBottom="600dp"
+        android:fontFamily="@font/app_name"
         android:text="My Folio"
         android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:fontFamily="@font/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.496" />
 
     <FrameLayout
         android:id="@+id/card_frame"
         android:layout_width="400dp"
-        android:layout_height="220dp"
-        android:layout_marginTop="200dp"
+        android:layout_height="210dp"
+        android:layout_marginTop="150dp"
         android:layout_marginBottom="459dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="400dp"
-            android:layout_height="220dp"
+            android:layout_height="210dp"
             android:background="@drawable/round_mypage"
             android:orientation="vertical">
 
@@ -83,29 +85,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold"
+                android:layout_marginTop="18dp"
+                android:background="@drawable/underline_search"
                 android:fontFamily="@font/notosans_black"
-                android:background="@drawable/underline_search"/>
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/card_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="Game Director"
-                android:fontFamily="@font/notosans_medium"/>
+                android:layout_marginTop="3dp"
+                android:fontFamily="@font/notosans_medium"
+                android:text="Game Director" />
 
             <TextView
                 android:id="@+id/card_info"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="43dp"
                 android:layout_marginStart="20dp"
+                android:fontFamily="@font/notosans_kr_regular"
                 android:text="안녕하세요.\n저의 Pot, Folio에 방문해주셔서 감사합니다."
-                android:textSize="12dp"
-                android:fontFamily="@font/notosans_kr_regular"/>
+                android:textSize="12dp" />
 
             <LinearLayout
                 android:layout_width="400dp"
@@ -135,7 +138,7 @@
             <LinearLayout
                 android:layout_width="400dp"
                 android:layout_height="20dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="4dp"
                 android:background="@drawable/round_mypage"
                 android:orientation="horizontal">
 
@@ -186,20 +189,21 @@
                 android:layout_height="20dp"
                 android:background="@drawable/round_mypage"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/card_app_logo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
+                    android:fontFamily="@font/app_name"
                     android:text="Pot,Folio"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/app_name"/>
+                    android:textColor="@color/black" />
+
                 <ImageView
                     android:layout_width="300dp"
                     android:layout_height="10dp"
                     android:layout_marginStart="7dp"
-                    android:background="@drawable/underline_card"
-                    />
+                    android:background="@drawable/underline_card" />
             </LinearLayout>
 
         </LinearLayout>
@@ -210,8 +214,8 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="400dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="200dp"
+        android:layout_height="190dp"
+        android:layout_marginTop="140dp"
         android:layout_marginBottom="459dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -223,67 +227,66 @@
             android:layout_width="75dp"
             android:layout_height="25dp"
             android:layout_gravity="right"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="17dp"
             android:layout_marginEnd="20dp"
-            android:text="명함 수정"
-            android:textSize="10sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/notosans_bold"
+            android:background="@drawable/roundbutton_point_orange"
             android:elevation="30dp"
-            android:background="@drawable/roundbutton_point_orange"/>
+            android:fontFamily="@font/notosans_bold"
+            android:text="명함 수정"
+            android:textColor="@color/white"
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/btn_card_big"
             android:layout_width="75dp"
             android:layout_height="25dp"
             android:layout_gravity="right"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="60dp"
             android:layout_marginEnd="20dp"
-            android:text="명함 확인"
-            android:textSize="10sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/notosans_bold"
+            android:background="@drawable/roundbutton_point_orange"
             android:elevation="30dp"
-            android:background="@drawable/roundbutton_point_orange"/>
+            android:fontFamily="@font/notosans_bold"
+            android:text="명함 확인"
+            android:textColor="@color/white"
+            android:textSize="10sp" />
     </FrameLayout>
-
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/profile"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="50dp"
         android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:elevation="10dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/profile1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:riv_corner_radius="100dp"
-        app:riv_border_width="5dp"
         app:riv_border_color="@color/white"
-        android:elevation="10dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/profile1"/>
+        app:riv_border_width="5dp"
+        app:riv_corner_radius="100dp" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="380dp"
+        android:layout_marginTop="350dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="62dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:orientation="vertical" >
+            android:layout_height="450dp"
+            android:orientation="vertical">
 
             <GridView
                 android:id="@+id/gridview"
                 android:layout_width="400dp"
-                android:layout_height="225dp"
+                android:layout_height="253dp"
                 android:layout_gravity="center"
+                android:horizontalSpacing="5dp"
                 android:numColumns="3"
                 android:verticalSpacing="1dp"
-                android:horizontalSpacing="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.4"
