--- a/app/src/main/res/layout/activity_s2_post.xml
+++ b/app/src/main/res/layout/activity_s2_post.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -53,10 +54,10 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
                         android:layout_marginStart="10dp"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/coding1" />
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/pimg1" />
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -64,7 +65,7 @@
                         android:scaleType="centerCrop"
                         android:layout_marginStart="10dp"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/coding2" />
+                        android:src="@drawable/pimg2" />
 
                 </LinearLayout>
 
@@ -86,7 +87,7 @@
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/post_round_profile"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/profile2"
+                    android:src="@drawable/prof2"
                     app:layout_constraintEnd_toStartOf="@+id/imageView2"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -99,7 +100,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/notosans_kr_bold"
-                    android:text="xxhyun"
+                    android:text="Happy_Engineer"
                     android:textAlignment="textStart"
                     android:textColor="#000000"
                     android:textSize="20sp"
@@ -111,7 +112,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/linearLayout3"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="250dp"
                     android:layout_marginBottom="121dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -128,7 +129,7 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="15dp"
                         android:fontFamily="@font/app_name"
-                        android:text="Code With Me"
+                        android:text="Today's Game "
                         android:textAlignment="textStart"
                         android:textColor="#000000"
                         android:textSize="30sp"
@@ -146,10 +147,10 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="20dp"
-                        android:text="오늘은 회원 가입시에 사용자의 이름, 아이디, 비밀번호를 받아서
-                        데이터베이스에 저장하는 코딩을 했다. \n\n회원 가입 시에 이름이나 아이디가 데이터 베이스에 존재하는 경우에는 회원가입이 불가능하다. 그리고 이름은 2글자 이상, 아이디는 6글자 이상 적어야하는 조건이 있다. 여러 조건들을 만족한 후에 회원가입이 완료된다. 회원가입 후에는 로그인 창으로 이동하며 로그인을 할 때 아이디와 비번을 입력하지 않은 경우 로그인을 할 수 없다.\n\n오늘의 코드 일지 끝"
-
-                    android:textAlignment="textStart"
+                        android:text="포트폴리오(portfolio)는 \n본래 서류가방이나 서류집을 뜻하는 어휘이다. \n문서를 모아 휴대할 수 있는 꾸러미를 지칭하던 말로,
+                        \n'port-'는 '가지고 다니다', \n'folio'는 '잎사귀'에서 유래한 종이라는 뜻이다.
+                       \n이러한 어원에서 파생되어 '(특히 심사 등 목적으로) \n작품이나 성과 등의 경력을 정리한 자료집'\n이라는 의미가 탄생했다."
+                        android:textAlignment="textStart"
                         android:textColor="#000000"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
